--- a/client-2/public/index.html
+++ b/client-2/public/index.html
@@ -39,5 +39,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- RFE: Load polyfill, only once, via JavaScript for only the component that needs it -->
+    <!-- FAQ: Placed at end of `<body>`, because polyfill-dependent browser may not support `defer` -->
+    <!-- NOTE: With no easy way to test unsupporting browsers, I opt for reliable HTML load of script -->
+    <script src="%PUBLIC_URL%/scripts/polyfills/datalist.js"></script>
   </body>
 </html>
