3: Fix `<datalist>` polyfill

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -43,6 +43,6 @@
     <!-- RFE: Load polyfill, only once, via JavaScript for only the component that needs it -->
     <!-- FAQ: Placed at end of `<body>`, because polyfill-dependent browser may not support `defer` -->
     <!-- NOTE: With no easy way to test unsupporting browsers, I opt for reliable HTML load of script -->
-    <script src="%PUBLIC_URL%/scripts/polyfills/datalist.js"></script>
+    <script src="%PUBLIC_URL%/shim/datalist.js"></script>
   </body>
 </html>
