--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!-- FAQ: When header becomes dynamic, it can become an app component -->
+    <header class="c-intro">
+      <h1>Create a Farm</h1>
+      <p class="c-intro__major">One animal at a time.</p>
+    </header>
+    <main id="root"></main>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
