--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,20 +28,27 @@
   </head>
   <body id="app" class="o-app">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- FAQ: When header becomes dynamic, it can become a component -->
-    <!-- HACK: Using `c-notice--major c-notice--inform` instead of ID-styling -->
+    <!-- WARN: If header becomes dynamic, it must become a component -->
     <header id="app-head" class="c-intro o-app__head">
       <h1>Animal Farm</h1>
       <p class="c-intro__major-text">Create a farm, one animal at a time.</p>
     </header>
+
     <!-- HACK: An `o-app` block and children should be defined in one file -->
     <main id="app-body" class="o-app__body o-app"></main>
-    <!-- FAQ: If temporary notice becomes dynamic, it can become a component -->
-    <aside id="app-foot" class="c-notice--warning c-notice--major o-app__foot">
-      <strong class="c-notice__title">Work In Progress</strong>
-      <p class="c-notice__message">What could we do with the information?</p>
+
+    <!-- WARN: If temporary notice becomes dynamic, it must become a component -->
+    <details id="app-foot" class="c-notice--warning c-notice--major o-app__foot">
+      <summary>
+        <strong class="c-notice__title">To Reviewers</strong>
+        <p class="c-notice__message">This app's primary feature does not rely on API activity nor data manipulation, because the browser can perform this via HTML5.</p>
+      </summary>
       <blockquote class="c-notice__message u-font-size--small">
-        <p>If <a href="https://developer.mozilla.org/en/docs/Web/HTML/Element/datalist" target="_blank" title="The HTML &lt;datalist&gt; element contains a set of &lt;option&gt; elements that represent the values available for other controls"><code>&lt;datalist&gt;</code></a> were <strong>not</strong> used to filter the data (the project requirement to filter seems to be solved, most efficiently, by using this element), then we may make an API call… Here are other solutions that would "use" the data:</p>
+        <p class="c-notice__message">The <a href="https://developer.mozilla.org/en/docs/Web/HTML/Element/datalist" target="_blank"><code><dfn id="dfn-datalist">&lt;datalist&gt;</dfn></code></a> element contains a set of <code>&lt;option&gt;</code> elements that represent the values available for other controls.</p>
+        <footer><abbr title="Mozilla Developer Network">MDN</abbr></footer>
+      </blockquote>
+      <blockquote class="c-notice__message u-font-size--small">
+        <p>If <a href="#dfn-datalist"><code>&lt;datalist&gt;</code></a> were <strong>not</strong> used to filter the data (the project requirement to filter seems to be solved, most efficiently, by using this element), then we <em>might</em>> want another API call. Here are other solutions that would "use" the data, and my comments about them:</p>
         <ul>
           <li>Use a submit button and API call <em>or</em> silent <code>onChange</code> API call (but, it is more efficient to filter via client-side JavaScript).</li>
           <li>Have a silent <code>onChange</code> filter perform by client-side JavaScript (but, why do that if the browser—or polyfill—can do the work).</li>
@@ -49,9 +56,10 @@
           <li>A benefit of <strong>not</strong> using the <code>&lt;datalist&gt;</code> element would be more freedom to style the filtered list. But, even then, a standard—and most appropriate—HTML element should be the (hidden) backbone of the functionality.</li>
           <li>If one builds stylable elements to visually—but not functionally—replace the <code>&lt;datalist&gt;</code>, then all accessibility afforded by the browser would need to be replicated. <em>Is that worth the effort compared to limited styling of widget?</em></li>
         </ul>
-        <footer>Wesley B, <cite>notes from candidate</cite></footer>
+        <footer>Wesley B <cite>notes from candidate</cite></footer>
       </blockquote>
-    </aside>
+    </details>
+
     <div id="deferred-resources">
       <!-- Styles -->
       <!-- FAQ: Why is `<link>` element inside `<body>` tag (not permitted)?
